[gd_scene load_steps=24 format=3 uid="uid://dkqg27dvam7ky"]

[ext_resource type="Script" path="res://player.gd" id="1_beihu"]
[ext_resource type="Texture2D" uid="uid://cala77ckbtbry" path="res://assets/sprites/alien-1.png" id="1_gevm3"]
[ext_resource type="Texture2D" uid="uid://b2gtlbioh2w6e" path="res://assets/ui/up-left.png" id="3_5fqpb"]
[ext_resource type="Texture2D" uid="uid://cyrfgajlsnuml" path="res://assets/ui/monochrome-transparent.png" id="4_gwgws"]
[ext_resource type="Texture2D" uid="uid://brco6ujdaufgc" path="res://assets/ui/up-right.png" id="5_ynwde"]
[ext_resource type="Texture2D" uid="uid://gi5n1focu8h6" path="res://assets/ui/down-left.png" id="6_40i15"]
[ext_resource type="Texture2D" uid="uid://e2yiat2x76sj" path="res://assets/ui/down-right.png" id="7_07l2c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bq7jk"]
atlas = ExtResource("1_gevm3")
region = Rect2(0, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvcnw"]
atlas = ExtResource("1_gevm3")
region = Rect2(16, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvdib"]
atlas = ExtResource("1_gevm3")
region = Rect2(32, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejlsb"]
atlas = ExtResource("1_gevm3")
region = Rect2(48, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt72s"]
atlas = ExtResource("1_gevm3")
region = Rect2(0, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm6tq"]
atlas = ExtResource("1_gevm3")
region = Rect2(16, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2sh6"]
atlas = ExtResource("1_gevm3")
region = Rect2(32, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hawfv"]
atlas = ExtResource("1_gevm3")
region = Rect2(48, 48, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_cpeot"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq7jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvcnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvdib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejlsb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt72s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm6tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2sh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hawfv")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v82rd"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8uemq"]
bg_color = Color(0.188235, 0.188235, 0.188235, 0.776471)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="ButtonGroup" id="ButtonGroup_xvr2r"]
resource_name = "Movement"

[sub_resource type="AtlasTexture" id="AtlasTexture_lytlw"]
atlas = ExtResource("4_gwgws")
region = Rect2(476, 357, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifb7r"]
atlas = ExtResource("4_gwgws")
region = Rect2(527, 357, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3cyp"]
atlas = ExtResource("4_gwgws")
region = Rect2(493, 357, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1g0f"]
atlas = ExtResource("4_gwgws")
region = Rect2(510, 357, 16, 16)

[node name="Player" type="CharacterBody2D"]
z_index = 1
motion_mode = 1
script = ExtResource("1_beihu")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
z_index = 10
sprite_frames = SubResource("SpriteFrames_cpeot")
animation = &"run"

[node name="PlayerShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_v82rd")
disabled = true

[node name="PlayerCamera" type="Camera2D" parent="."]

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="PlayerUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/CenterContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="PlayerUI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_8uemq")
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovementButtons" type="GridContainer" parent="PlayerUI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(16, 24)
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Up-Left" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = ExtResource("3_5fqpb")
expand_icon = true

[node name="Up" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = SubResource("AtlasTexture_lytlw")
expand_icon = true

[node name="Up-Right" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = ExtResource("5_ynwde")
expand_icon = true

[node name="Left" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = SubResource("AtlasTexture_ifb7r")
expand_icon = true

[node name="Filler" type="Control" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = SubResource("AtlasTexture_r3cyp")
expand_icon = true

[node name="Down-Left" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = ExtResource("6_40i15")
expand_icon = true

[node name="Down" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = SubResource("AtlasTexture_q1g0f")
expand_icon = true

[node name="Down-Right" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer/MovementButtons"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_xvr2r")
icon = ExtResource("7_07l2c")
expand_icon = true

[node name="EndTurnButton" type="Button" parent="PlayerUI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "END TURN"

[connection signal="pressed" from="PlayerUI/CenterContainer/VBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
